# cpp-catch2-data-provider

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
tests/: TestDataProvider.cpp  TestDataProvider.h  cube_tests.cpp  main.cpp
